# iLab-Capstone-Project

./: Team Expectations Agreement.docx  capstone_updated_project_(4).ipynb  pyproject.toml  requirements.txt
ilab_capstone_project/: LICENSE  Makefile  README.md  setup.py
ilab_capstone_project/docs/: Makefile  conf.py  index.rst  make.bat
ilab_capstone_project/models/: capstone_updated_project(_Linera_Regression).ipynb  capstone_updated_project_knn_(SVM).ipynb  ohe.joblib  preprocessor.joblib  scaler.joblib
ilab_capstone_project/notebooks/: 01_EDA.ipynb  02_MODEL MEAN SCORES.ipynb  02_MODEL SCORES.ipynb  03_RandomForest.ipynb  04_Support Vector Machine.ipynb  04a_Support Vector Machine.ipynb  04b_Updated_Support_Vector_Machine.ipynb  05_XGBoost.ipynb  06_Gradient Boosting Regressor.ipynb  07_Neural Network.ipynb  08a_Logistic Regression.ipynb  09a_Linear Regression.ipynb  8c_updated_Logistic_Regression.ipynb  BASELINE MODEL.ipynb  Geography.twb  Gradient Boosting Regressor.ipynb  KNN_LOGISTIC,_LINEAR_MODEL.ipynb  Neural Network.ipynb  RandomForest.ipynb  Support Vector Machine.ipynb  Updated_Support_Vector_Machine.ipynb  XGBoost.ipynb  capstone_Final_(logistic).ipynb  capstone_updated_project.ipynb  capstone_updated_project_(SVM)_(2).ipynb  capstone_updated_projectlinear.ipynb  cleaned_data.csv  iLab Capstone Project.ipynb  svm_model.pkl
ilab_capstone_project/references/: GDD 2018 Codebook_Jan 10 2022.xlsx
ilab_capstone_project/src/data/: GlobalDietaryDatabase_V2 (1).csv
ilab_capstone_project/webpage/: app_test.py  main.py  user.py
(+20 files in other folders)
